# persian_subtitle_search

./: .env.example  .gitignore  README.md  agents.md  app.py  pyproject.toml  run.bat  test_search.py
docs/mcp/: opensubtitles.md
prompts/: translate_srt.txt
src/adapters/apis/: openai_translator.py
src/adapters/mcp/: imdb_lookup.py  opensubtitles_client.py  opensubtitles_stdio.py
src/core/contracts/: llm.py  tools.py
src/core/schemas/: subtitles.py
src/models/llm/: srt_translator.py
src/monitoring/: mlflow_utils.py
src/pipelines/inference/: subtitle_search_pipeline.py
src/services/: subtitle_service.py
src/ui/: app.py
src/utils/: encoding.py  file_io.py  git.py
